// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-html > should add one tags plugin instance 1`] = `
{
  "entry": {
    "foo": [
      "src/foo.ts",
    ],
    "main": [
      "src/main.ts",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "main",
        ],
        "filename": "main.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "foo",
        ],
        "filename": "foo.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "name": "HtmlBasicPlugin",
      "options": {
        "info": {
          "foo.html": {
            "title": "Rsbuild App",
          },
          "main.html": {
            "title": "Rsbuild App",
          },
        },
      },
    },
    HtmlTagsPlugin {
      "ctx": {
        "append": true,
        "hash": false,
        "publicPath": true,
        "tags": [
          {
            "attrs": {
              "src": "jq.js",
            },
            "tag": "script",
          },
        ],
      },
      "meta": {
        "plugin": "HtmlTagsPlugin",
      },
      "name": "HtmlTagsPlugin",
    },
  ],
}
`;

exports[`plugin-html > should add tags plugin instances for each entries 1`] = `
{
  "entry": {
    "foo": [
      "src/foo.ts",
    ],
    "main": [
      "src/main.ts",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "main",
        ],
        "filename": "main.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "foo",
        ],
        "filename": "foo.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "name": "HtmlBasicPlugin",
      "options": {
        "info": {
          "foo.html": {
            "title": "Rsbuild App",
          },
          "main.html": {
            "title": "Rsbuild App",
          },
        },
      },
    },
    HtmlTagsPlugin {
      "ctx": {
        "append": true,
        "hash": false,
        "includes": [
          "main.html",
        ],
        "publicPath": true,
        "tags": [
          {
            "attrs": {
              "src": "jq.js",
            },
            "tag": "script",
          },
        ],
      },
      "meta": {
        "plugin": "HtmlTagsPlugin",
      },
      "name": "HtmlTagsPlugin",
    },
    HtmlTagsPlugin {
      "ctx": {
        "append": true,
        "hash": false,
        "includes": [
          "foo.html",
        ],
        "publicPath": true,
        "tags": [
          {
            "attrs": {
              "src": "foo.js",
            },
            "tag": "script",
          },
        ],
      },
      "meta": {
        "plugin": "HtmlTagsPlugin",
      },
      "name": "HtmlTagsPlugin",
    },
  ],
}
`;

exports[`plugin-html > should allow to modify plugin options by tools.htmlPlugin 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "inject": true,
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "name": "HtmlBasicPlugin",
      "options": {
        "info": {
          "index.html": {
            "title": "Rsbuild App",
          },
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should allow to set favicon by html.favicon option 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "index",
        ],
        "favicon": "src/favicon.ico",
        "filename": "index.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "name": "HtmlBasicPlugin",
      "options": {
        "info": {
          "index.html": {
            "title": "Rsbuild App",
          },
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should allow to set inject by html.inject option 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "index",
        ],
        "filename": "index.html",
        "inject": "body",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "name": "HtmlBasicPlugin",
      "options": {
        "info": {
          "index.html": {
            "title": "Rsbuild App",
          },
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should enable minify in production 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "index",
        ],
        "filename": "index.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": {
          "collapseWhitespace": true,
          "keepClosingSlash": true,
          "minifyCSS": true,
          "minifyJS": {
            "format": {
              "ascii_only": true,
            },
            "mangle": {
              "safari10": true,
            },
          },
          "minifyURLs": true,
          "removeComments": false,
          "removeEmptyAttributes": true,
          "removeRedundantAttributes": true,
          "removeScriptTypeAttributes": true,
          "removeStyleLinkTypeAttributes": true,
          "useShortDoctype": true,
        },
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "name": "HtmlBasicPlugin",
      "options": {
        "info": {
          "index.html": {
            "title": "Rsbuild App",
          },
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should register html plugin correctly 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "index",
        ],
        "filename": "index.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "name": "HtmlBasicPlugin",
      "options": {
        "info": {
          "index.html": {
            "title": "Rsbuild App",
          },
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should support multi entry 1`] = `
{
  "entry": {
    "foo": [
      "src/foo.ts",
    ],
    "main": [
      "src/main.ts",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "main",
        ],
        "filename": "main.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    HtmlWebpackPlugin {
      "userOptions": {
        "chunks": [
          "foo",
        ],
        "filename": "foo.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": false,
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
      },
      "version": 5,
    },
    HtmlBasicPlugin {
      "name": "HtmlBasicPlugin",
      "options": {
        "info": {
          "foo.html": {
            "title": "Rsbuild App",
          },
          "main.html": {
            "title": "Rsbuild App",
          },
        },
      },
    },
  ],
}
`;
